--- a/Website/common/style.css
+++ b/Website/common/style.css
@@ -8,7 +8,7 @@
 
 body {
     font: 14px/1.1 Helvetica, Sans-Serif;
-    background: url(../images/stripe.jpg);
+    background: url(../images/stripe.jpg) no-repeat fixed;
     width: 100%;
 }
 
@@ -30,7 +30,7 @@ input {
 */
 body {
     font: 14px/1.1 Helvetica, Sans-Serif;
-    background: url(../images/stripe.jpg) no-repeat;
+    background: url(../images/stripe.jpg) no-repeat fixed;
     background-size: 100%;
 }
 
@@ -56,26 +56,16 @@ section {
 /*
     TYPOGRAPHY
 */
-/* a {
+a {
     text-decoration: none;
     color: #900;
-    border-bottom: 1px dotted #900;
+    /* border-bottom: 1px dotted #900; */
     outline: none;
-} */
-
-.box {
-    background-color: rgb(200, 200, 200, .7);
-    border-radius: 10px;
-    /* width:25%;
-    height:45%; */
-    margin:20px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
 }
+
+
  
-.account {
+.box {
     background-color: rgb(200, 200, 200, .7);
     border-radius: 10px;
     margin: 20px;
@@ -86,6 +76,13 @@ section {
     align-items: center;
     justify-content: center;
 } 
+
+#section2 {
+    background-color: rgb(4,15,61,.7);
+    display: flex;
+    flex-direction: row;
+    font-size: 3vh;
+}
 
 #intro {
     background-color: rgb(200,200,200,.7);
@@ -143,6 +140,35 @@ p {
     padding: 3px;
 }
 
+#user-profile {
+    border-radius: 50%;
+}
+
+.blue {
+    background-color: rgb(4,15,61);
+    color: #FFF;
+    margin: 15vh;
+    height:75%;
+}
+
+#section3 {
+    background-color: rgb(200, 200, 200, .7);
+    margin: 15vh;
+    height:75%;
+}
+
+#section3 form{
+    display:flex;
+    align-items: center;
+    flex-direction: column;
+}
+#section3 img{
+    width:25vh;
+    height:25vh;
+    border-radius: 50%;
+}
+
+
 /*
     HEADER
 */
@@ -168,18 +194,18 @@ p {
     text-align: right;
 }
 
-#control a:hover{
+.button:hover{
     background:blueviolet;
 }
 
 /*
     FORM STUFF
 */
-label {
+/* label {
     background: #999;
     color: white;
     padding: 3px;
-}
+} */
 
 input[type="text"],
 input[type="password"] {    
